--- a/src/app/pages/print-label/print-label.component.html
+++ b/src/app/pages/print-label/print-label.component.html
@@ -157,6 +157,7 @@
                 <th>Line nhận</th>
                 <th style="min-width: 100px;">Người in</th>
                 <th style="min-width: 120px;">Tình trạng</th>
+                <th style="min-width: 140px;">Thời gian</th>
                 <th style="min-width: 150px;">Ghi chú</th>
                 <th>Hoàn thành</th>
                 <th>Xóa</th>
@@ -223,6 +224,9 @@
                     <option value="NG">NG</option>
                     <option value="Done">Done</option>
                   </select>
+              </td>
+              <td style="border: 1px solid #000000; text-align: center; font-size: 11px; color: #666;">
+                  <span class="status-time">{{ item.statusUpdateTime | date:'dd/MM/yyyy HH:mm' }}</span>
               </td>
               <td style="border: 1px solid #000000;">
                   <input 
